apps/vault/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: default
spec:
  selector:
    app: vaultwarden
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
